# FacialAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  result_1.json  result_2.json
